changes requested in PR
Made most reccomended changes, including grammatical and adding the notebook to index.rst

--- a/docs/source/tutorials/Jones-Calculus.ipynb
+++ b/docs/source/tutorials/Jones-Calculus.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Intro to Polarization\n",
-    "This tutorial will guide you through the basics of Jones calculus, a matrix calculus used for the propagation of polarization through an optical system. Any polarization state can be represented by a simple 2-vector called a Jones vector $\\mathbf{v}$\n",
+    "This tutorial will guide you through the basics of Jones calculus. Any polarization state can be represented by a simple 2-vector called a Jones vector $\\mathbf{v}$\n",
     "\n",
     "$$\\mathbf{v} = \n",
     "\\begin{pmatrix}\n",
@@ -13,14 +13,14 @@
     "E_{y} \\\\\n",
     "\\end{pmatrix}$$\n",
     "\n",
-    "The components of $\\mathbf{v}$ are the complex amplitudes that correspond to light oriented or (polarized) in the local horizontal and vertical directions. Horizontally polarized light looks like this:\n",
+    "The components of $\\mathbf{v}$ are the complex amplitudes that correspond to light oriented (polarized) in the local horizontal and vertical directions. Horizontally polarized light looks like:\n",
     "$$\\mathbf{v}_{H} = \n",
     "\\begin{pmatrix}\n",
     "1 \\\\\n",
     "0 \\\\\n",
     "\\end{pmatrix}.$$\n",
     "\n",
-    "Whereas vertically polarized light looks like this:\n",
+    "Whereas vertically polarized light looks like:\n",
     "$$\\mathbf{v}_{V} = \n",
     "\\begin{pmatrix}\n",
     "0 \\\\\n",
@@ -47,10 +47,9 @@
    "source": [
     "from prysm.x.polarization import linear_pol_vector\n",
     "import numpy as np\n",
+    "\n",
     "hpol = linear_pol_vector(0)\n",
     "vpol = linear_pol_vector(90)\n",
-    "\n",
-    "\n",
     "\n",
     "print('Horizontal Polarization = ',hpol)\n",
     "print('Vertical Polarization   = ',vpol)"
@@ -60,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also invoke the complex dimension of polarization to describe a phase delay between the horizontal and linear polarization states. A quarter-wave phase delay is $\\delta\\phi = 2\\pi/4 $ or $\\pi/2$. If we add this phase delay to the $E_{y}$ component, the resultant Jones vector looks like this:\n",
+    "We can also describe a polarization state with a phase delay between the horizontal and linear polarization states. A quarter-wave phase delay is $\\delta\\phi = 2\\pi/4 $ or $\\pi/2$. If we add this phase delay to the $E_{y}$ component, the resultant Jones vector looks like this:\n",
     "$$\\mathbf{v}_{L} = \n",
     "\\frac{1}{\\sqrt{2}}\n",
     "\\begin{pmatrix}\n",
@@ -68,7 +67,7 @@
     "e^{i\\pi/2} \\\\\n",
     "\\end{pmatrix}.$$\n",
     "\n",
-    "Where the factor of $1/\\sqrt{2}$ is there to normalize the Jones vector. This kind of polarization is called \"Circular\" polarization. Light can be circularly polarized in the left- or right-handed direction. Both are available via the `circular_pol_vector` mehtod. The only difference is the sign of the imaginary part of the polarization state."
+    "Where the factor of $1/\\sqrt{2}$ is there to normalize the Jones vector. This kind of polarization is called \"Circular\" polarization. Light can be circularly polarized in the left- or right-handed direction. Both are available via the `circular_pol_vector` method. The only difference is the sign of the imaginary part of the polarization state."
    ]
   },
   {
@@ -90,6 +89,7 @@
     "\n",
     "lpol = circular_pol_vector(handedness='left')\n",
     "rpol = circular_pol_vector(handedness='right')\n",
+    "\n",
     "print('Left-hand Circular Polarization = ',lpol)\n",
     "print('Right-hand Circular Polarization = ',rpol)"
    ]
@@ -113,22 +113,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j]]\n"
+      "[[0.85355339+0.j 0.35355339+0.j]\n",
+      " [0.35355339+0.j 0.14644661+0.j]]\n"
      ]
     }
    ],
    "source": [
     "from prysm.x.polarization import linear_polarizer\n",
     "\n",
-    "h_polarizer = linear_polarizer()\n",
+    "h_polarizer = linear_polarizer(theta=np.radians(22.5))\n",
     "print(h_polarizer)"
    ]
   },
@@ -141,17 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Power of H-pol after polarizer =  1.0\n",
-      "Total Power of V-pol after polarizer =  3.749399456654644e-33\n",
-      "Total Power of L-pol after polarizer =  0.4999999999999999\n",
-      "Total Power of R-pol after polarizer =  0.4999999999999999\n"
+      "Total Power of H-pol after polarizer =  0.8535533905932737\n",
+      "Total Power of V-pol after polarizer =  0.1464466094067263\n",
+      "Total Power of L-pol after polarizer =  0.5\n",
+      "Total Power of R-pol after polarizer =  0.5\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
