Re-doing ELT commit
Updated realistic telescope apertures docs to include the ELT. Comes with the hyperlink to the section up top. Re-set the notebook to make sure the docs run it.

--- a/docs/source/how-tos/Notable-Telescope-Apertures.ipynb
+++ b/docs/source/how-tos/Notable-Telescope-Apertures.ipynb
@@ -16,6 +16,7 @@
     "- [HST](#HST)\n",
     "- [JWST](#JWST)\n",
     "- [TMT](#TMT)\n",
+    "- [ELT](#ELT)\n",
     "- [LUVOIR-A](#LUVOIR-A)\n",
     "- [LUVOIR-B](#LUVOIR-B)\n",
     "- [HabEx-A](#HabEx-A)\n",
@@ -303,6 +304,49 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ce51700e",
+   "metadata": {},
+   "source": [
+    "# ELT\n",
+    "The European Extremely Large Telescope (ELT) is the largest of the 30m class apertures with a 39.3m \"diameter\". It has 1.45 m segments and 4 mm gaps. 17 rings are required to shade the entire aperture. We follow the same procedure for the TMT in identifying which segments to exclude, but this time we've done it for you. You know, as a treat."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6061e4df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y = make_xy_grid(1024, diameter=39.3)\n",
+    "r, t = cart_to_polar(x, y)\n",
+    "\n",
+    "flat_to_flat_to_vertex_vertex = 2 / np.sqrt(3)\n",
+    "vtov_to_flat_to_flat = 1 / flat_to_flat_to_vertex_vertex\n",
+    "segdiam = vtov_to_flat_to_flat * 1.45\n",
+    "\n",
+    "exclude = [\n",
+    "\t\t817, 918, 818, 819, 721, 917, 820, 722, 816, 916, # top\n",
+    "\t\t868, 867, 869, 866, 769, 870, 865, 768, 770, 871, # bottom\n",
+    "\t\t902, 901, 903, 900, 801, 904, 899, 800, 802, 905, # top left\n",
+    "\t\t834, 835, 833, 836, 737, 832, 837, 738, 736, 831, # top right\n",
+    "\t\t885, 884, 886, 883, 785, 887, 882, 784, 786, 888, # bottom left\n",
+    "\t\t851, 852, 850, 853, 753, 849, 854, 754, 752, 848  # bottom right\n",
+    "\t]\n",
+    "\n",
+    "# the centers are easier to exclude by appending, but you can type them out yourself if you wish\n",
+    "for i in range(61):\n",
+    "    exclude.append(i)\n",
+    "\n",
+    "cha = CompositeHexagonalAperture(x,y,17,segdiam,0.004,exclude=exclude)\n",
+    "spiders = spider(vanes=6,x=x,y=y,width=1/3,rotation=30)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(15,15))\n",
+    "ax.imshow(cha.amp&spiders, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "91710fc4",
    "metadata": {},
    "source": [
@@ -479,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
