changed tilted polarizer to horizontal
Also re-set the notebook so none of the cells are executed

--- a/docs/source/tutorials/Jones-Calculus.ipynb
+++ b/docs/source/tutorials/Jones-Calculus.ipynb
@@ -32,18 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Horizontal Polarization =  [1.+0.j 0.+0.j]\n",
-      "Vertical Polarization   =  [6.123234e-17+0.j 1.000000e+00+0.j]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from prysm.x.polarization import linear_pol_vector\n",
     "import numpy as np\n",
@@ -72,18 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Left-hand Circular Polarization =  [0.70710678+0.j         0.        +0.70710678j]\n",
-      "Right-hand Circular Polarization =  [ 0.70710678+0.j         -0.        -0.70710678j]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from prysm.x.polarization import circular_pol_vector\n",
     "\n",
@@ -113,22 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.85355339+0.j 0.35355339+0.j]\n",
-      " [0.35355339+0.j 0.14644661+0.j]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from prysm.x.polarization import linear_polarizer\n",
     "\n",
-    "h_polarizer = linear_polarizer(theta=np.radians(22.5))\n",
+    "# polarizers accept radians as input angle\n",
+    "h_polarizer = linear_polarizer(theta=np.radians(0))\n",
     "print(h_polarizer)"
    ]
   },
@@ -141,20 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total Power of H-pol after polarizer =  0.8535533905932737\n",
-      "Total Power of V-pol after polarizer =  0.1464466094067263\n",
-      "Total Power of L-pol after polarizer =  0.5\n",
-      "Total Power of R-pol after polarizer =  0.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "polarizations = [hpol,vpol,lpol,rpol]\n",
@@ -176,20 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "polarization in = [1.+0.j 0.+0.j]\n",
-      "polarization out = [2.22044605e-16+6.123234e-17j 1.00000000e+00-6.123234e-17j]\n",
-      "polarization in = [6.123234e-17+0.j 1.000000e+00+0.j]\n",
-      "polarization out = [ 1.00000000e+00-6.123234e-17j -1.60812265e-16+6.123234e-17j]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from prysm.x.polarization import half_wave_plate\n",
     "\n",
