typo in polarized prop demo

--- a/docs/source/how-tos/polarized_propagation.ipynb
+++ b/docs/source/how-tos/polarized_propagation.ipynb
@@ -89,12 +89,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is neat, but doesn't show off how the optic can vary as a function of space. Let's apply a radial error in the diattenuation of the $J_{xx}$ and $J_{yy}$ elements"
+    "This is neat, but doesn't show off how the optic can vary as a function of space. Let's apply a radial error in the retardance of the $J_{xx}$ and $J_{yy}$ elements. We added a method to generate the Jones matrix of Vector Vortex Retarders (VVRs), which are used in coronagraphy and vortex fiber nullers. VVRs are like spatially-varying half-wave plates, which allow us to do some really interesting things with light. However for the purposes of this demo, we use it simply to illustrate spatially-varying polarized elements with `prysm`.`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -120,29 +120,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we will put this polarizer in front of a perfect lens with a circular aperture to see how this apodization affects image formation. However, to make `prysm.propagation` compatible with polarized fields we need to call `make_propagation_polarized` from `x.polarization`."
+    "Now we will put this VVR in front of a perfect lens with a circular aperture to see how this spatially-varying retardance affects image formation. However, to make `prysm.propagation` compatible with polarized fields we need to call `make_propagation_polarized` from `x.polarization`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "supported propagation functions =  ['focus', 'unfocus', 'focus_fixed_sampling', 'angular_spectrum']\n"
+     ]
+    }
+   ],
    "source": [
-    "from prysm.x.polarization import make_propagation_polarized\n",
-    "make_propagation_polarized()"
+    "from prysm.x.polarization import make_propagation_polarized, supported_propagation_funcs\n",
+    "make_propagation_polarized()\n",
+    "print('supported propagation functions = ',supported_propagation_funcs)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function goes through the supported propagation functions and applies a decorator to them to support propagation of `*shape` $\\times$ 2 $\\times$ 2 arrays. We can then go and load in a propagation function to examine the PSF"
+    "This function goes through the supported `prysm.propagation` functions and applies a decorator to them to support propagation of `*shape` $\\times$ 2 $\\times$ 2 arrays. We can then go and load in a propagation function to examine the PSF."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,11 +218,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "This is just one simple illustration of how spatially-varying polarization effects in the pupil of an optical system can influence imaging."
+   ]
   }
  ],
  "metadata": {
